--- a/style.css
+++ b/style.css
@@ -77,3 +77,18 @@ section.header {
     background: url("https://images.pexels.com/photos/450035/pexels-photo-450035.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1") center no-repeat;
     background-size: cover;
 }
+.scroll-indicator {
+    width: 100%;
+    height: 4px;
+    background: white;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999;
+    visibility: hidden;
+}
+.progress {
+    width: 0%;
+    height: 4px;
+    background: orange;
+}
